[project]
name = "gpe-tokenizer"
version = "0.1.0"
description = "Grapheme Pair Encoding Tokenizer for Sinhala Language"
authors = [
    {name = "Schizo00",email = "naween.k@live.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets (>=4.2.0,<5.0.0)",
    "huggingface-hub (>=0.35.3,<0.36.0)",
    "grapheme (>=0.6.0,<0.7.0)",
    "regex (>=2025.9.18,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
